// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Section Section Structure 1`] = `
<section>
  <section
    class="fd-section"
  >
    
    .fd-section

  </section>
  

  <section
    class="fd-section"
  >
    
    .fd-section

  </section>
  

  <section
    class="fd-section"
  >
    
    .fd-section

  </section>
  

</section>
`;

exports[`Storyshots Layouts/Section Testing Section With Headlines 1`] = `
<section>
          

  <section
    class="fd-section "
  >
    
    
    <div
      class="fd-section__header"
    >
      
        
      <h2
        class="fd-section__title"
      >
        section with h2 headline
      </h2>
      
        
      <div
        class="fd-section__actions"
      >
        action part
      </div>
      
    
    </div>
    
    Section Content
    
    <div
      class="fd-section__footer"
    >
      footer part
    </div>
    

  </section>
  
    

  <section
    class="fd-section "
  >
    
    
    <div
      class="fd-section__header"
    >
      
        
      <h3
        class="fd-section__title"
      >
        section with h3 headline
      </h3>
      
            
      <div
        class="fd-section__actions"
      >
        action part
      </div>
      
    
    </div>
    
    Section Content
    
    <div
      class="fd-section__footer"
    >
      footer part
    </div>
    

  </section>
  
    

  <section
    class="fd-section "
  >
    
    
    <div
      class="fd-section__header"
    >
      
        
      <h4
        class="fd-section__title"
      >
        section with h4 headline
      </h4>
      
        
      <div
        class="fd-section__actions"
      >
        action part
      </div>
      
    
    </div>
    
    Section Content
    
    <div
      class="fd-section__footer"
    >
      footer part
    </div>
    

  </section>
  
    

  <section
    class="fd-section "
  >
    
    
    <div
      class="fd-section__header"
    >
      
        
      <h5
        class="fd-section__title"
      >
        section with h5 headline
      </h5>
      
        
      <div
        class="fd-section__actions"
      >
        action part
      </div>
      
    
    </div>
    
    Section Content
    
    <div
      class="fd-section__footer"
    >
      footer part
    </div>
    

  </section>
  


  <section
    class="fd-section "
  >
    
    
    <div
      class="fd-section__header"
    >
      
        
      <h6
        class="fd-section__title"
      >
        section with h6 headline
      </h6>
      
        
      <div
        class="fd-section__actions"
      >
        action part
      </div>
      
    
    </div>
    
Section Content
    
    <div
      class="fd-section__footer"
    >
      footer part
    </div>
    

  </section>
  

</section>
`;

exports[`Storyshots Layouts/Section Testing Simple Section 1`] = `
<section>
  <section
    class="fd-section "
  >
    
    Simple Section

  </section>
  


  <section
    class="fd-section "
  >
    
    
    <div
      class="fd-section__header"
    >
      
        
      <h3
        class="fd-section__title"
      >
        Section Title
      </h3>
      
    
    </div>
    
    Section Content

  </section>
  
    

  <section
    class="fd-section "
  >
    
    
    <div
      class="fd-section__header"
    >
      
        
      <h3
        class="fd-section__title"
      >
        Title
      </h3>
      
        
      <div
        class="fd-section__actions"
      >
        action section
      </div>
      
    
    </div>
    
    Section Content

  </section>
  
    

  <section
    class="fd-section "
  >
    
    
    <div
      class="fd-section__header"
    >
      
        
      <h3
        class="fd-section__title"
      >
        Title
      </h3>
      
        
      <div
        class="fd-section__actions"
      >
        action part
      </div>
      
    
    </div>
    
    Section Content
    
    <div
      class="fd-section__footer"
    >
      footer part
    </div>
    

  </section>
  
    

  <section
    class="fd-section fd-section--full-bleed"
  >
    
    
    <div
      class="fd-section__header"
    >
      
        
      <h3
        class="fd-section__title"
      >
        Title
      </h3>
      
        
      <div
        class="fd-section__actions"
      >
        action part
      </div>
      
    
    </div>
    
    Section Content with Full Bleed
    
    <div
      class="fd-section__footer"
    >
      footer part
    </div>
    

  </section>
  
    

  <section
    class="fd-section "
  >
    Simple Section
  </section>
  

</section>
`;

exports[`Storyshots Layouts/Section With Headers 1`] = `
<section
  class="fd-section"
>
  
    
  <div
    class="fd-section__header"
  >
    
      
    <h3
      class="fd-section__title"
    >
      Section title
    </h3>
    
    
  </div>
  
    
  <div
    class="fd-layout-panel"
  >
    
        
    <div
      class="fd-layout-panel__body"
    >
      
            fd-layout-panel
        
    </div>
    
    
  </div>
  

</section>
`;

exports[`Storyshots Layouts/Section With Layout Grid 1`] = `
<section
  class="fd-section"
>
  
    
  <div
    class="fd-container"
  >
    
      
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--4"
      >
        
        
        <div
          class="fd-layout-panel"
        >
          
            
          <div
            class="fd-layout-panel__body"
          >
            
                
            <p>
              .fd-layout-panel
            </p>
            
            
          </div>
          
        
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--4"
      >
        

        
        <div
          class="fd-layout-panel"
        >
          
            
          <div
            class="fd-layout-panel__body"
          >
            
                
            <p>
              .fd-layout-panel
            </p>
            
            
          </div>
          
        
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--4"
      >
          
        
        <div
          class="fd-layout-panel"
        >
          
            
          <div
            class="fd-layout-panel__body"
          >
            
                
            <p>
              .fd-layout-panel
            </p>
            
            
          </div>
          
        
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--4"
      >
          
        
        <div
          class="fd-layout-panel"
        >
          
            
          <div
            class="fd-layout-panel__body"
          >
            
                
            <p>
              .fd-layout-panel
            </p>
            
            
          </div>
          
        
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--4"
      >
          
        
        <div
          class="fd-layout-panel"
        >
          
            
          <div
            class="fd-layout-panel__body"
          >
            
                
            <p>
              .fd-layout-panel
            </p>
            
            
          </div>
          
        
        </div>
        
      
      </div>
      
      
    </div>
    
    
  </div>
  

</section>
`;

exports[`Storyshots Layouts/Section With Panels 1`] = `
<section
  class="fd-section"
>
  
    
  <div
    class="fd-layout-panel"
  >
    
        
    <div
      class="fd-layout-panel__header"
    >
      
            
      <div
        class="fd-layout-panel__head"
      >
        
                
        <h3
          class="fd-layout-panel__title"
        >
          
                    .fd-layout-panel__title
                
        </h3>
        
                
        <p
          class="fd-layout-panel__description"
        >
          
                    .fd-layout-panel__description
                
        </p>
        
            
      </div>
      
            
      <div
        class="fd-layout-panel__actions"
      >
        
                .fd-layout-panel__actions
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-layout-panel__filters"
      id=""
    >
      
            .fd-layout-panel__filters
        
    </div>
    
        
    <div
      class="fd-layout-panel__body"
    >
      
            .fd-layout-panel__body
        
    </div>
    
        
    <div
      class="fd-layout-panel__footer"
    >
      
            .fd-layout-panel__footer
        
    </div>
    
    
  </div>
  

</section>
`;
